# Azure-Enterprise-Multi-Agent-AI-Assistant

./: .gitignore  main.py  pyproject.toml  requirements.txt
Notebook/: Model.ipynb
backend/: Dockerfile  README.md  alter.py  pyproject.toml  requirements.txt  reset_db.py  save_graph.py  workflow_graph.md
backend/Notebook/: model.ipynb
backend/app/: main.py
backend/app/api/: api_router.py
backend/app/api/dependencies/: auth.py
backend/app/api/routes/: Document.py  agents.py  attachments.py  chat.py  conversation.py  health.py  rag.py  workflow.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/database/: sample.db  session.py
backend/app/mcp/: client.py
backend/app/models/: __init__.py  chat_history.py  chat_session.py  document.py  memory.py  message.py  message_metadata.py  request_models.py  response_models.py  user.py
backend/app/prompts/: agent_prompts.py  system_prompts.py
backend/app/rag/: embeddings.py  ingest.py  retriever.py  vectorstore.py
backend/app/schemas/: attachment_schema.py  chat_schema.py  conversation_schema.py  request_models.py  response_models.py  user_schema.py
backend/app/services/: agent_service.py  azure_agent_service.py  azure_blob_service.py  azure_blob_storage_service.py  azure_cosmos_db_service.py  conversation_service.py  document_parser.py  llm_service.py  mcp_service.py  sql_agent_service.py  storage_service.py  workflow_service.py
backend/app/utils/: __init__.py  token_counter.py
backend/app/workflows/: graph_builder.py  state.py
backend/scratch/: test_agent.py
(+51 files in other folders)
