[project]
name = "enterprise-multi-agent-ai-assistant-backend"
version = "0.1.0"
description = "Backend service for Enterprise Multi-Agent AI Assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-model-profiles>=0.0.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.1",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langgraph-api>=0.5.37",
    "langgraph-cli>=0.4.9",
    "langsmith>=0.4.43",
    "mcp>=1.21.1",
    "python-dotenv>=1.2.0",
    "tavily>=1.1.0",
    "tavily-python>=0.7.13",
]
